--- a/IEEE/style.css
+++ b/IEEE/style.css
@@ -1,7 +1,7 @@
 *{    /*add a back to top icon*/
     margin: 0;
     padding: 0;
-    }
+}
 
 .main{ /* Main background styling */
     width: 100%;
@@ -9,7 +9,7 @@
     background-size: cover;
     background-position: center;
     position: absolute;
-    background-color: white;
+    background-color: white;    
     background-attachment: fixed;
     z-index: -100;
 }
@@ -33,7 +33,7 @@
     text-decoration: none;
     color: white;
     font-size: 15px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     z-index: 100;
 }
 
@@ -82,7 +82,7 @@
     text-decoration: none;
     color: black;
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     transition: 0.1s ease-in-out;
 }
 
@@ -95,7 +95,7 @@
 }
 
 .search-bar{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 50%;
     max-width: 100%;
     height: 40px;
@@ -154,7 +154,7 @@
     height: 50px;
     background: hsl(240, 89%, 48%);
     margin-top: 83px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
     float: left;
     font-size: 15px;
@@ -223,26 +223,28 @@
     margin: 100px auto;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     width: 100%;
     height: auto;
-    background-color: white;
     position: absolute; /* Ensure z-index works */
     z-index: 0; /* Ensure the footer is below the wedge */
     padding-bottom: 50px;
+    background-image: url(https://media.istockphoto.com/id/863512454/video/abstract-background.jpg?s=640x640&k=20&c=R9-CTRf9Rv6k6nodC5yhzh83xaLa0H1Z7UeHB_S7Gh8=);
+    background-attachment: fixed;
 }
 
 .body h1{
     margin-top: 50px;
     font-size: 50px;
     color: black;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     align-items: center;
     margin-left: 50px;
     text-decoration: none;
 }
 
 .tabs{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     font-size: 40px;
     color:white; 
@@ -265,7 +267,7 @@
 }
 
 .card1 p{ /*We have the dynamcs of the buttons of the description*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     align-items: center;
     color: white;
@@ -287,7 +289,7 @@
 }
 
 .card2 p{ /*We have the dynamcs of the buttons of the description*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     align-items: center;
     color: white;
@@ -308,7 +310,7 @@
 }
 
 .card3 p{ /*We have the dynamcs of the buttons of the description*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     align-items: center;
     color: white;
@@ -328,19 +330,22 @@
     margin-left: 100px;
     margin-top: 0px;
     padding: 60px;
-    border: 1px solid black;
+    border: 2px solid black;
+    border-right: none;
     border-radius: 1px;
     position: relative;
     z-index: 1;
-    background-color: blue;
+    background: linear-gradient(to bottom, rgba(17, 13, 216, 0), rgb(231, 231, 231));
     clip-path: polygon(50px 0, 100% 0, 100% 100%, 0 100%, 0 50px);
 }
 
 .panel1 p{ /*We have the dynamcs of the buttons of the description*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    width: 40%;
     align-items: center;
-    color: white;
+    position: relative;
+    color: black;
     margin-top: 0px;
     text-decoration: none; /* Remove the underline */
  }
@@ -351,46 +356,25 @@
     margin-left: 0px;
     margin-top: 60px;
     padding: 60px;
-    border: 1px solid black;
+    border: 2px solid black;
+    border-left: none;
     border-radius: 1px;
     position: relative;
     z-index: 1;
-    background-color: blue;
+    background: linear-gradient(to bottom, rgba(17, 13, 216, 0), rgb(231, 231, 231));
 }
 
 .panel2 p{ /*We have the dynamcs of the buttons of the description*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    width: 40%;
     align-items: center;
-    color: white;
+    color: black;
     margin-top: 0px;
     text-decoration: none; /* Remove the underline */
  }
 
- .panel3{
-    width: 90%;
-    height: auto;
-    margin-left: 100px;
-    margin-top: 60px;
-    position: relative;
-    padding: 60px;
-    border: 1px solid black;
-    border-radius: 1px;
-    z-index: 2;
-    background-color: blue;
-    clip-path: polygon(50px 0, 100% 0, 100% 100%, 0 100%, 0 50px);
-}
-
-.panel3 p{ /*We have the dynamcs of the buttons of the description*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
-    align-items: center;
-    color: white;
-    margin-top: 0px;
-    text-decoration: none; /* Remove the underline */
- }
-
-.panel1.panel2.panel3.a:hover{
+.panel1.panel2.a:hover{
     text-decoration: underline;
     cursor: pointer;
     font-weight: bold;
@@ -414,19 +398,19 @@
     text-align: left;
     text-decoration: none;
     font-weight: bold; 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
 }
 
 .frame h2{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
     margin-left: 600px;
     position: absolute;
 }
 
 .frame p{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
     margin-top: 55px;
     margin-left: 600px;
@@ -452,7 +436,7 @@
     height: 50px;
     background: hsl(240, 89%, 48%);
     margin-top: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     cursor: pointer;
     float: left;
     font-size: 15px;
@@ -481,7 +465,7 @@
 .location{
     width: 80%;
     margin-left: 80px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: blue;
     position: relative;
     z-index: 10;
@@ -505,7 +489,7 @@
     background-size: 100%;
     position: relative; /* Change to fixed to keep it at the bottom */
     z-index: 5; /* Ensure the footer is below the wedge */
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     background-image: url(https://media.istockphoto.com/id/2010503711/vector/dark-blue-futuristic-digital-technology-background.jpg?s=612x612&w=0&k=20&c=l5MIl8J-26ImzHSQ6f-AEt-69il1t622HPYWZkspu7Y=);
     background-repeat: no-repeat;
@@ -541,7 +525,7 @@
     text-decoration: none;
     color: white;
     font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 90%;
 }
 
@@ -549,7 +533,7 @@
     text-decoration: none;
     color: white;
     font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin-left: 20px;
     width: 90%;
 }
