--- a/IEEE/style.css
+++ b/IEEE/style.css
@@ -560,3 +560,11 @@
 .back-to-top:hover img {
     opacity: 0.8; /* Add a hover effect */
 }
+
+.contact{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    margin-left: 50px;
+    width: 90%;
+    position: relative;
+}
