--- a/IEEE/style.css
+++ b/IEEE/style.css
@@ -569,3 +569,44 @@
     position: relative;
     z-index: 10;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 95%;
+    margin-left: 30px;
+  }
+  
+  td, th {
+    border: 2px solid #818080;
+    text-align: left;
+    padding: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+  }
+
+  tr {
+    border-bottom: 1px solid #ddd;
+  }
+
+  tr:hover {background-color: #D6EEEE;}
+  
+  tr a:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  tr a:link {
+    text-decoration: none;
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+
+  
