--- a/IEEE/style.css
+++ b/IEEE/style.css
@@ -582,7 +582,7 @@ table {
     text-align: left;
     padding: 8px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
+    font-size: 22px;
   }
 
   tr {
@@ -590,21 +590,28 @@ table {
   }
 
   tr:hover {background-color: #D6EEEE;}
-  
+
   tr a:hover {
     text-decoration: underline;
     cursor: pointer;
-    font-weight: bold;
+   
   }
 
   tr a:link {
     text-decoration: none;
-    color: black;
+    color: blue;
     background-color: transparent;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
   }
   
+  tr a:visited {
+    color: black;
+    background-color: transparent;
+    text-decoration: underline;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
   tr:nth-child(even) {
     background-color: #dddddd;
   }
